// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Light Logo correctly renders (footer) 1`] = `
<div
  className="logo"
>
  <a
    className="logo__link logo__link--light"
    href="main.html"
  >
    <span
      className="logo__letter logo__letter--1"
    >
      W
    </span>
    <span
      className="logo__letter logo__letter--2"
    >
      T
    </span>
    <span
      className="logo__letter logo__letter--3"
    >
      W
    </span>
  </a>
</div>
`;

exports[`Logo correctly renders 1`] = `
<div
  className="logo"
>
  <a
    className="logo__link "
    href="main.html"
  >
    <span
      className="logo__letter logo__letter--1"
    >
      W
    </span>
    <span
      className="logo__letter logo__letter--2"
    >
      T
    </span>
    <span
      className="logo__letter logo__letter--3"
    >
      W
    </span>
  </a>
</div>
`;
